<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView 
      android:layout_height="wrap_content" 
      android:id="@+id/form_title" 
      android:layout_width="match_parent" 
      android:singleLine="true" 
      android:gravity="center">
    </TextView>
    <EditText 
      android:text="" 
      android:hint="@string/pTeam"
      android:layout_height="wrap_content" 
      android:id="@+id/team" 
      android:layout_width="match_parent" 
      android:singleLine="true" 
      android:editable="true">
    </EditText>
    <EditText 
      android:text="" 
      android:hint="@string/pFName"
      android:layout_height="wrap_content" 
      android:id="@+id/firstName" 
      android:layout_width="match_parent" 
      android:singleLine="true" 
      android:editable="true">
    </EditText>
    <EditText 
      android:text="" 
      android:hint="@string/pLName"
      android:layout_height="wrap_content" 
      android:id="@+id/lastName" 
      android:layout_width="match_parent" 
      android:singleLine="true" 
      android:editable="true">
    </EditText>
    <EditText 
      android:text="" 
      android:hint="@string/pAge"
      android:layout_height="wrap_content" 
      android:id="@+id/age" 
      android:layout_width="match_parent" 
      android:singleLine="true" 
      android:editable="true">
    </EditText>
    <EditText 
      android:text="" 
      android:hint="@string/pNation"
      android:layout_height="wrap_content" 
      android:id="@+id/country_origin" 
      android:layout_width="match_parent" 
      android:singleLine="true" 
      android:editable="true">
    </EditText>
    <Spinner 
        android:id="@+id/position"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/position_prompt"
    />
    <TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/pref_foot_radio" />
	<RadioGroup android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal">

		<RadioButton android:id="@+id/radio_left"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/left_foot" android:layout_weight="1" />

		<RadioButton android:id="@+id/radio_right"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/right_foot" android:layout_weight="1" />
	</RadioGroup>

    <Button
        android:id="@+id/confirm"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:onClick="onConfirm"
        android:text="Submit" >

    </Button>
    </LinearLayout>
</ScrollView>
